# Engineering-Worst-Case-Data-Structures-for-Dynamic-Connectivity

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: conda-env.yml  eval.py  experiments.yml  generate.py  graphPortChen.py  plot.py  randomGraphClusters.py
benchmark/benchmarkCode/: benchmark.cpp  graph_generator.cpp  graph_generator.hpp  io.cpp  io.hpp
benchmark/results/: experiments_correctnessCheck.csv  experiments_cutSet.csv  experiments_maxTimeUpdate.csv  experiments_queryTime.csv  experiments_regular.csv
include/: AVLTree.hpp  BiasedBinaryForest.hpp  BiasedBinaryHeap.hpp  BiasedBinaryTree.hpp  CutSet.hpp  DTree.hpp  DynConnectivityAlgorithm.hpp  ETForestCutSet.hpp  ETForestHDT.hpp  GKKT.hpp  Graph.hpp  HDT.hpp  Kaibel.hpp  LinkCutTrees.hpp  QueryForest.hpp  QueryForestAVL.hpp  TabularHash.hpp  Wang.hpp  base.hpp
include/PrimitiveStructures/: RootedTree.hpp
src/: AVLTree.ipp  BiasedBinaryForest.cpp  BiasedBinaryHeap.ipp  BiasedBinaryTree.ipp  CutSet.cpp  DTree.cpp  ETForestCutSet.cpp  ETForestHDT.cpp  GKKT.cpp  Graph.cpp  HDT.cpp  Kaibel.cpp  LinkCutTrees.cpp  QueryForestAVL.cpp  TabularHash.cpp  Wang.cpp  main.cpp
test/: AVLTree.cpp  BBTForest.cpp  BBTNodes.cpp  BBTTracking.cpp  BBTTree.cpp  CMakeLists.txt  CutSet.cpp  ETForestCutSet.cpp  GKKT.cpp  HDT.cpp  Kaibel.cpp  LinkCutTrees.cpp  TabularHash.cpp  Wang.cpp  basic.cpp
